[package]
name = "candle-rwkv"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing-chrome = { version = "0.7" }
tracing-subscriber = { version = "0.3" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
regex = { version = "1.10" }
hf-hub = { git = "https://github.com/nkypy/hf-hub.git" }

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle/metal", "candle-nn/metal"]
