[package]
name = "candle-rwkv"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
intel-mkl-src = { version = "0.8", features = [
    "mkl-static-lp64-iomp",
], optional = true }
accelerate-src = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
hf-hub = "0.4"
candle-datasets = { git = "https://github.com/huggingface/candle.git" }
memmap2 = "0.9.4"
rand = "0.8.5"
byteorder = "1.5.0"
half = "2.4.0"
bytemuck = "1.15.0"
repugnant-pickle = { version = "0.0.1", features = [
    "torch",
], git = "https://github.com/nkypy/repugnant-pickle.git" }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
metal = ["candle/metal", "candle-nn/metal"]
